fixed background contrast

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ img.back {
     display: inline-block;
     transition: box-shadow 0.2s ease-in-out, transform 0.3s ease-in-out;
     transform-style: preserve-3d;
-    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.3);
     border-radius: 0.25rem;
 }
 
@@ -63,7 +63,7 @@ img.back {
 }
 
 .card:hover {
-    box-shadow: 10px 12px 15px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: -5px 5px 15px 5px rgba(88, 64, 64, 0.3);
 }
 
 .front,
